<resources>
    <string name="app_name">ControlSales</string>
    <string name="title_action_bar">CRUD</string>

    <string name="salvo_com_sucesso">Salvo com sucesso!</string>
    <string name="erro_ao_salvar">Erro ao salvar!</string>
    <string name="preencha_os_campos">Preencha os campos!</string>
    <string name="erro_inesperado">Erro inesperado!</string>


    <string name="open">open</string>
    <string name="close">close</string>

    <string name="add_mob_key">ca-app-pub-9531587904937318~9992869506</string>
    <string name="add_mob_banner">ca-app-pub-9531587904937318/9600797893</string>


    <string name="validation_fields_login">Complete os Campos</string>
    <string name="ok">Ok</string>
    <string name="nome">Nome</string>
    <string name="primeiro_nome">Primeiro nome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sair">Sair</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="configuracoes">Configurações</string>
    <string name="consultar">Consultar</string>
    <string name="home">Home</string>
    <string name="preferencias">Preferências</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="nome_usuario">Nome usuario</string>
    <string name="telefone_usuario">Telefone usuario</string>
    <string name="email_usuario">Email usuario</string>
    <string name="cpf_usuario">CPF usuario</string>
    <string name="cpf">CPF</string>
    <string name="fechar">fechar</string>
    <string name="clientes">Clientes</string>
    <string name="gerenciar_clientes">Gerenciar Clientes</string>
    <string name="comprar">Comprar</string>
    <string name="realizar_venda">Realizar venda</string>
    <string name="vendas">Vendas</string>
    <string name="gerenciar_vendas">Gerenciar vendas</string>
    <string name="by_lucio_darcon">By Lucio Darcon</string>
    <string name="https_github_com_luciodarcon">https://github.com/LucioDarcon</string>
    <string name="date">Data:</string>
    <string name="name_item">Nome do item:</string>
    <string name="responsible_of_purchase">Reponsável pela compra:</string>
</resources>
