<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/preferences"
        android:title="@string/preferencias">

        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home" />
        </menu>

    </item>

    <item
        android:id="@+id/people"
        android:title="@string/clientes">
        <menu>
            <item
                android:id="@+id/consultCustomer"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/consultar" />
            <item
                android:id="@+id/addCustomer"
                android:icon="@drawable/ic_person_black_add_24dp"
                android:title="@string/cadastrar" />
        </menu>
    </item>

    <item
        android:id="@+id/configCustomer"
        android:title="@string/configuracoes">
        <menu>
            <item
                android:id="@+id/leave"
                android:icon="@drawable/ic_replay_black_24dp"
                android:title="@string/sair" />
        </menu>
    </item>
</menu>