<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_gravity="center"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:layout_margin="16dp"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="16dp"
            android:gravity="center"
            android:inputType="textWebEmailAddress"
            android:layout_gravity="center" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="textWebEmailAddress"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:text="@string/ok"
            android:background="@color/colorSecondary"
            android:layout_margin="16dp"
            />

    </LinearLayout>

</LinearLayout>