<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNameCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:requiresFadingEdge="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtNameCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/nome" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmailCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutNameCustomer"
            android:layout_gravity="center"
            android:layout_margin="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmailCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTelephoneCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutEmailCustomer"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTelephoneCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/telefone"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCpfCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutTelephoneCustomer"
            android:layout_gravity="center"
            android:layout_margin="14dp"
            app:counterEnabled="true"
            app:counterMaxLength="15">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtCpfCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/cpf"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutCpfCustomer"
            android:layout_alignParentLeft="true"
            android:layout_margin="16dp"
            android:background="@drawable/bg_btn_radius"
            android:text="@string/salvar"
            android:textColor="@color/white"
            android:theme="@style/Widget.AppCompat.Button.Borderless" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCloseDialogCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutCpfCustomer"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:background="@drawable/bg_btn_red_radius"
            android:text="@string/fechar"
            android:textColor="@color/white"
            android:theme="@style/Widget.AppCompat.Button.Borderless" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

